@@ -112,7 +112,7 @@ extern Sfio_t * sfmail_open __((const char *type));
 extern char *   sfmail_fname __((Sfio_t *fp));
 extern int    	sfmail_abort __((Sfio_t *fp));
 extern int    	sfmail_close_alternate __((Sfio_t *fp, const char *where, const char *suffix));
-extern int     _sfmail_close_ __((Sfio_t *fp, int *inop, time_t *mtimep));
+extern int     _sfmail_close_ __((Sfio_t *fp, long *inop, time_t *mtimep));
 extern int 	sfmail_close  __((Sfio_t *fp));
 #endif
 
